--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,7 +7,8 @@ branches:
     - master  # ветка git
 
 build: off  # будем использовать свой скрипт сборки
-
+install:
+  -java -jar ./artifacts/app-order.jar
 build_script:
   - chmod +x gradlew
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
