--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,7 +8,7 @@ branches:
 
 build: off  # будем использовать свой скрипт сборки
 install:
-  -java -jar ./artifacts/app-order.jar
+  -java -jar ./artifacts/app-order.jar $
 build_script:
   - chmod +x gradlew
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
