--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,7 +8,10 @@ branches:
 
 build: off  # будем использовать свой скрипт сборки
 
-build_script:
+install:
+  - java -jar ./artifacts/app-order.jar $
   - chmod +x gradlew
+
+build_script:
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
 
