--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,9 +8,12 @@ branches:
 
 build: off  # будем использовать свой скрипт сборки
 
-install:
-  - java -jar "./artifacts/app-order.jar" &
-  - chmod +x gradlew
+artifacts:
+  - path: artifacts/*.jar
+    name: app-order.jar
+#install:
+#  - java -jar "./artifacts/app-order.jar" &
+#  - chmod +x gradlew
 
 build_script:
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
