Changed build.gradle, appveyor.yml and tests

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,12 +8,15 @@ branches:
 
 build: off  # будем использовать свой скрипт сборки
 
+install:
+  - chmod +x gradlew
+
 artifacts:
   - path: artifacts/*.jar
-    name: app-order.jar
-#install:
+  - name: app-order.jar
+
 #  - java -jar "./artifacts/app-order.jar" &
-#  - chmod +x gradlew
+
 
 build_script:
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
