--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,7 +12,9 @@ install:
   - chmod +x gradlew
 
 artifacts:
-  - name: app-order.jar
+  - path: app-order.jar
+    name: jarfile
+
 
 #  - java -jar "./artifacts/app-order.jar" &
 
