--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,12 +8,12 @@ branches:
 
 build: off  # будем использовать свой скрипт сборки
 
+artifacts:
+  - path: artifacts/app-order.jar
+    name: app-order
+
 install:
   - chmod +x gradlew
-
-artifacts:
-  - path: app-order.jar
-    name: jarfile
 
 
 #  - java -jar "./artifacts/app-order.jar" &
