--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,20 +8,12 @@ branches:
 
 build: off  # будем использовать свой скрипт сборки
 
-#artifacts:
-#  - path: artifacts/app-order.jar
-#    name: app-order
-#
 install:
+  - java -jar ./artifacts/app-order.jar &
   - chmod +x gradlew
-
-
-#  - java -jar "./artifacts/app-order.jar" &
-
 
 build_script:
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
 
-artifacts:
-  - path: app-order.jar
+
 
